fix_spacing

--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -5,10 +5,10 @@
 }
 
 .row {
-    display: -ms-flexbox !important;
-    display: flex !important;
-    -ms-flex-wrap: wrap !important;
-    flex-wrap: wrap !important;
+    // display: -ms-flexbox !important;
+    // // display: flex !important;
+    // // -ms-flex-wrap: wrap !important;
+    // // flex-wrap: wrap !important;
 
     &.rp-6{
         margin-right: -6px !important;
