--- a/src/styles/scss/banner.scss
+++ b/src/styles/scss/banner.scss
@@ -22,7 +22,8 @@
     }
     .banner-btn {
         margin-left: 6.2%;
-        // width: 280px;
+        padding: 0 34px !important ;
+        width: 280px;
         height: 48px;
         font-size: 15px;
         font-weight: 600;
