--- a/src/styles/scss/navigation.scss
+++ b/src/styles/scss/navigation.scss
@@ -11,6 +11,10 @@ $Navigation-H:64px;
         a {
             color: #1a181b !important;
         }
+        .nav-link {
+            padding-left: 12px ;
+            padding-right: 12px ;
+        }
     }
     .active {
         a {
