--- a/src/styles/scss/search.scss
+++ b/src/styles/scss/search.scss
@@ -3,7 +3,8 @@
 
 $margin-left:101px;
 .listyourbusiness-page {
-    margin-top: 64px ;
+    margin-top: 204px ;
+    // margin-top: 64px ;
 
     .searchbox-container {
         position: relative ;
